apps/open-webui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
  namespace: openwebui
spec:
  type: ClusterIP
  selector:
    app: openwebui
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
